Right slide panel button width

--- a/source/modules/right-slide-panel/style.styl
+++ b/source/modules/right-slide-panel/style.styl
@@ -77,7 +77,7 @@
       margin-bottom 30px
       
       button
-        width 220px
+        //width 220px
         margin 0 auto
       
     &-link
@@ -154,11 +154,11 @@
       
     &-button
       display inline-block
-      width 220px
+      //width 220px
       margin-right 80px
       
       button
-        width 220px
+        width 100%
       
     &-link
       color #cccccc
