Small panel deleted

--- a/source/components/catalog.list.small/style.styl
+++ b/source/components/catalog.list.small/style.styl
@@ -2,10 +2,10 @@
 
 #elSmallMap
   position fixed !important
-  top 82px
+  top 0
   right 0
   width calc(100vw - 127px - 1024px)
-  height calc(100vh - 82px)
+  height 100vh
   overflow hidden
   z-index 10
   
@@ -63,6 +63,7 @@
       z-index 100
     
   &__menu
+    display none
     height 82px
     background-color #000
     padding 24px 48px
